--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #
 # MIT License
 #
-# Copyright (c) 2022-2023 TweetWallFX
+# Copyright (c) 2022-2024 TweetWallFX
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -22,10 +22,10 @@
 # THE SOFTWARE.
 #
 
-rootProjectName=YourRootProjectName
+rootProjectName=tweetwallfx-2024be
 mavenGroupName=org.tweetwallfx
 currentVersion=1.0.0
-projectDescriptionBase=Insert your Project Description
+projectDescriptionBase=TweetwallFX 2024 BE
 
 # properties for gradle process
 org.gradle.caching=true
