Add initial photos.devoxx.be based mosaic rendring incl. qrcode.

--- a/conference-impl/build.gradle
+++ b/conference-impl/build.gradle
@@ -29,7 +29,10 @@ dependencies {
     implementation 'org.tweetwallfx:tweetwallfx-cache:1.1.+'
     implementation 'org.tweetwallfx:tweetwallfx-configuration:1.1.+'
     implementation 'org.tweetwallfx:tweetwallfx-conference-spi:1.1.+'
+    implementation 'org.tweetwallfx:tweetwallfx-controls:1.1.+'
+    implementation 'org.tweetwallfx:tweetwallfx-conference-spi:1.1.+'
     implementation 'org.tweetwallfx:tweetwallfx-stepengine-api:1.1.+'
+    implementation 'org.tweetwallfx:tweetwallfx-transitions:1.1.+'
     implementation 'org.tweetwallfx:tweetwallfx-utility:1.1.+'
 
     runtimeOnly 'org.apache.logging.log4j:log4j-slf4j2-impl'
