--- a/exhibition/src/main/resources/tweetwallConfig.json
+++ b/exhibition/src/main/resources/tweetwallConfig.json
@@ -125,6 +125,9 @@
                 "config": {
                     "nodeSelector": "#topRatedeNode"
                 }
+            },
+            {
+                "stepClassName": "org.tweetwallfx.conference.impl.DevoxxPhotoSharingMosaicStep"
             }
         ]
     }
